--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,6 +1,7 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
-/web/node_modules
 /.pnp
 .pnp.js
 
@@ -9,12 +10,9 @@
 
 # production
 /build
-/web/build
 
 # misc
 .DS_Store
-.env
-/web/.env
 .env.local
 .env.development.local
 .env.test.local
@@ -23,7 +21,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-/web/npm-debug.log*
-/web/yarn-debug.log*
-/web/yarn-error.log*
